<resources>
    <string name="app_name">ManishaApp</string>
    <string name="my_cart">My Cart</string>
    <string name="total_cost">Total Cost</string>
    <string name="add">Add</string>
    <string name="show_more">
        <u>Show More</u>
    </string>
    <string name="place_order">PLACE ORDER</string>
    <string name="book_table">BOOK TABLE</string>
    <string name="reach_us_at_9854562142">Reach us at: 9854562142</string>
    <string name="timing">5.0(200+)| All days 09:00AM -06:00PM</string>
    <string name="inka_restaurant">Inka Restaurant</string>
</resources>
