<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RestaurantActivity">
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scroll_view"
    >

<RelativeLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

 <LinearLayout android:layout_width="match_parent"
               android:orientation="vertical"
               android:layout_height="match_parent">
     <RelativeLayout android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="0.2"
     >

     <View android:layout_width="match_parent"
           android:layout_height="match_parent"
     android:background="@drawable/retaurant"/>
         <View android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/color_transparent"/>
         <RelativeLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/margin_10dp"
                         android:orientation="horizontal" android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true">
             <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10dp"
                        android:src="@drawable/ic_arrow_back_white_32dp"/>
             <ImageView android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/share"
                        android:tint="@color/color_white"
                        android:padding="@dimen/margin_10dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/share"
                        android:layout_marginEnd="13dp"/>
             <ImageView android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:tint="@color/color_white"
                        android:padding="@dimen/margin_10dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/information"
                        android:layout_marginEnd="75dp"/>

         </RelativeLayout>
</RelativeLayout>
     <View android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.8"
           android:background="@color/color_white"
     />
 </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginBottom="60dp"
                  android:orientation="vertical" android:layout_alignParentStart="true">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="170dp"
                android:background="@color/color_white"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                android:id="@+id/cardView">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:layout_margin="@dimen/margin_10dp"
                          android:gravity="center">


                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/inka_restaurant"
                          android:textStyle="bold"
                          android:textSize="@dimen/text_large"
                          android:layout_marginTop="@dimen/margin_10dp"
                          android:textColor="@color/color_black"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/timing"
                          android:textSize="@dimen/textsmall"
                          android:layout_gravity="center_horizontal"
                          android:layout_marginTop="@dimen/margin_10dp"
                          android:textColor="@color/color_black"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/reach_us_at_9854562142"
                          android:textSize="@dimen/textsmall"
                          android:layout_gravity="center_horizontal"
                          android:textColor="@color/color_black"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/book_table"
                          android:padding="@dimen/margin_10dp"
                          android:background="@color/color_black"
                          android:textSize="@dimen/textsmall"
                          android:layout_marginTop="@dimen/margin_10dp"
                          android:layout_gravity="center_horizontal"
                          android:layout_marginBottom="@dimen/margin_10dp"
                          android:textColor="@color/color_white"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
                android:text="Starter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_medium"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerView2"
                android:layout_marginStart="20dp"
                android:nestedScrollingEnabled="false"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginEnd="20dp"
        />
    </LinearLayout>

</RelativeLayout>

    </androidx.core.widget.NestedScrollView>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="120dp"
                  android:layout_marginEnd="120dp"
                  android:gravity="center"
                  android:orientation="horizontal"
                  android:background="@drawable/yellow_background"
                  android:padding="5dp"
                  android:layout_marginBottom="20dp">
        <ImageView android:layout_width="20dp"
                   android:layout_height="30dp"
                   android:layout_marginRight="@dimen/margin_10dp"
        android:src="@drawable/menu"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
        android:text="MENU"/>

    </LinearLayout>
        <TextView
                android:id="@+id/cart"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/color_black"
                android:textColor="@color/color_white"
                android:text="VIEW CART(0 ITEMS)"
                android:visibility="gone"
                android:gravity="center"
        />
    </LinearLayout>
</RelativeLayout>