<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="10"
              android:orientation="vertical"
              tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/background_color_for_mycart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

        <ImageView
                android:id="@+id/btn_back_mycart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_white_32dp"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_cart"
                android:textSize="@dimen/textsize_mycart"
                android:textColor="@color/color_white"
                android:layout_marginTop="@dimen/margin_10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>



        <androidx.cardview.widget.CardView
                android:layout_width="@dimen/cardview_width"
                android:layout_height="@dimen/cardview_height"
                android:background="@color/color_white"
                app:cardCornerRadius="@dimen/cardview_corner_radius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="@dimen/margin40">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:text="@string/total_cost"
                        android:textSize="@dimen/text_medium"
                        android:textAlignment="center"
                        android:textColor="@color/color_yellow"
                />

                <TextView
                        android:id="@+id/total_cost_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin5"
                        android:text="$36.00"
                        android:textSize="@dimen/text_large"
                        android:textColor="@color/color_black"
                        android:textAlignment="center"
                />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7">

        <TextView
                android:id="@+id/review_order_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Review Orders"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/color_black"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginTop="@dimen/margin_10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginTop="@dimen/margin_10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/review_order_textview"/>

        <TextView
                android:id="@+id/showmore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_more"
                android:textSize="@dimen/textsmall"
                android:textColor="@color/color_black"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginTop="@dimen/margin_10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textAlignment="viewEnd"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/recyclerView"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/delivery_txt"
                  android:text="Dilevery Options"
                  android:textSize="@dimen/text_medium"
                  android:layout_marginLeft="@dimen/margin_10dp"
                  android:textColor="@color/color_black"
                  app:layout_constraintTop_toBottomOf="@id/showmore"/>
        <RadioGroup
                android:id="@+id/radios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:inputType="text"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/delivery_txt">


            <RadioButton
                    android:id="@+id/first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:background="@color/color_white"
                    android:button="@null"
                    android:drawablePadding="30dp"
                    android:buttonTint="@color/color_yellow"
                    android:drawableEnd="@android:drawable/btn_radio"
                    android:text="Dine-in"
                    android:textSize="@dimen/text_medium" />

            <RadioButton
                    android:id="@+id/second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/color_white"
                    android:button="@null"
                    android:layout_weight="0.5"
                    android:drawablePadding="30dp"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:text="Take way"
                    android:textSize="@dimen/text_medium" />
        </RadioGroup>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/place_order"
                android:textSize="@dimen/text_medium"
                android:background="@color/background_color_for_mycart"
                android:textColor="@color/color_white"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>